--- a/library-base/build.gradle
+++ b/library-base/build.gradle
@@ -32,6 +32,12 @@ android {
         }
     }
 
+    //统一资源前缀，规范资源引用
+    resourcePrefix "app_"
+    dataBinding {
+        enabled true
+    }
+
 }
 
 dependencies {
