--- a/library-base/build.gradle
+++ b/library-base/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     //support相关库
     api rootProject.ext.dependencies["appcompat-v7"]
 
+    api rootProject.ext.dependencies["design"]
+
     //公用资源在base中依赖 library-res
     api project(':library-res')
 
