--- a/module-first/build.gradle
+++ b/module-first/build.gradle
@@ -4,11 +4,11 @@ android {
     defaultConfig {
         //如果是独立模块，则使用当前组件的包名
         if (isBuildModule.toBoolean()) {
-            applicationId "jack.module_one"
+            applicationId "jack.module_first"
         }
     }
     //统一资源前缀，规范资源引用
-    resourcePrefix "one_"
+    resourcePrefix "first_"
 
 }
 
