--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':library-base', ':library-res', ':module-main', ':module-login', ':module-second', ':module-third', ':module-four', ':module-one'
+include ':app', ':library-base', ':library-res', ':module-main', ':module-login', ':module-second', ':module-third', ':module-four', ':module-first'
